Auth checks and validation with proper routing created userprofile component.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["SUPABASE", "Traka"]
+  "cSpell.words": [
+    "guerrillamail",
+    "mailinator",
+    "minutemail",
+    "SUPABASE",
+    "tempmail",
+    "Traka"
+  ]
 }
