--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,13 @@
   ],
   "hints": {
     "typescript-config/consistent-casing": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "no-inline-styles": "off",
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
+    ]
   }
 }
