New file: supabase/.temp? and other send-reminder vercel.json web-push schedule, courses and other ts files, Actions files and component under schedule pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
   "cSpell.words": [
+    "colour",
     "guerrillamail",
     "mailinator",
     "minutemail",
+    "nums",
+    "prefs",
     "SUPABASE",
     "tempmail",
-    "Traka"
+    "Traka",
+    "Unconfirm",
+    "Unstar",
+    "webpush"
   ]
 }
