--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
+ 
+}
+{
   "crons": [
     {
       "path": "/api/reminders/send",
       "schedule": "* * * * *"
     }
   ]
+  "rewrites": [{"source": "/(.*)", "destination": "/index.html"}]
 }
