--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,13 @@ yarn-error.log*
 .env.local*
 # vercel
 .vercel
+.vercel.json
+
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# API
+/api/reminders/send
